force-app/main/default/objects/Proposal_Site__c/Proposal_Site__c.object-meta.xml
<CustomObject>
    <label>Proposal Site</label>
    <nameField>
        <displayFormat>PS-{00000}</displayFormat>
        <label>Proposal Site Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Site</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>