force-app/main/default/objects/Proposal_Site__c/fields/Additional_Certifications__c.field-meta.xml
<CustomField>
    <fullName>Additional_Certifications__c</fullName>
    <label>Additional Certifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AIA 2030 Commitment</fullName>
            </value>
            <value>
                <fullName>Enterprise Green Communities</fullName>
            </value>
            <value>
                <fullName>EGC 2020 Green Communities</fullName>
            </value>
            <value>
                <fullName>Energy $mart</fullName>
            </value>
            <value>
                <fullName>Energy Star</fullName>
            </value>
            <value>
                <fullName>Fitwel</fullName>
            </value>
            <value>
                <fullName>Green Globes</fullName>
            </value>
            <value>
                <fullName>ILFI Living Building Challenge</fullName>
            </value>
            <value>
                <fullName>ILFI Living Community Challenge</fullName>
            </value>
            <value>
                <fullName>ILFI Living Product Challenge</fullName>
            </value>
            <value>
                <fullName>ILFI Biophlic Design Initiative</fullName>
            </value>
            <value>
                <fullName>LEED BD+C Certification</fullName>
            </value>
            <value>
                <fullName>LEED ID+C Certification</fullName>
            </value>
            <value>
                <fullName>LEED ND Certification</fullName>
            </value>
            <value>
                <fullName>LEED Homes Certification</fullName>
            </value>
            <value>
                <fullName>LEED Cities and Communities Certification</fullName>
            </value>
            <value>
                <fullName>LEED Recertification Certification</fullName>
            </value>
            <value>
                <fullName>LEED Zero Certification</fullName>
            </value>
            <value>
                <fullName>NY-CHPS</fullName>
            </value>
            <value>
                <fullName>RELi</fullName>
            </value>
            <value>
                <fullName>WELL Certification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>