force-app/main/default/objects/Proposal_Site__c/fields/Address_Entered_Manually__c.field-meta.xml
<CustomField>
    <fullName>Address_Entered_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Entered Manually</label>
    <type>Checkbox</type>
</CustomField>