force-app/main/default/objects/Proposal_Site__c/fields/AddressLocation__c.field-meta.xml
<CustomField>
    <fullName>AddressLocation__c</fullName>
    <label>Address Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>