force-app/main/default/objects/Proposal_Site__c/fields/Affordable_Solar__c.field-meta.xml
<CustomField>
    <fullName>Affordable_Solar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Affordable Solar</label>
    <type>Checkbox</type>
</CustomField>