force-app/main/default/objects/Proposal_Site__c/fields/Age_of_Building__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Building__c</fullName>
    <inlineHelpText>Enter the year the building was built.</inlineHelpText>
    <label>Age of Building</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Before 1920</fullName>
            </value>
            <value>
                <fullName>1921-1940</fullName>
            </value>
            <value>
                <fullName>1941-1950</fullName>
            </value>
            <value>
                <fullName>1951-1960</fullName>
            </value>
            <value>
                <fullName>1961-1970</fullName>
            </value>
            <value>
                <fullName>1971-1980</fullName>
            </value>
            <value>
                <fullName>1981-1990</fullName>
            </value>
            <value>
                <fullName>1991-2000</fullName>
            </value>
            <value>
                <fullName>2001-2010</fullName>
            </value>
            <value>
                <fullName>After 2011</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>