force-app/main/default/objects/Proposal_Site__c/fields/Age_of_Primary_Heating_System__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Primary_Heating_System__c</fullName>
    <description>Enter the approximate age of the existing unit</description>
    <inlineHelpText>Select approximate age of existing system.</inlineHelpText>
    <label>Age of Primary Heating System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 2 years old</fullName>
            </value>
            <value>
                <fullName>2 to 4 years old</fullName>
            </value>
            <value>
                <fullName>5 to 9 years old</fullName>
            </value>
            <value>
                <fullName>10 to 14 years old</fullName>
            </value>
            <value>
                <fullName>15 to 19 years old</fullName>
            </value>
            <value>
                <fullName>20 years old or more</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>