force-app/main/default/objects/Proposal_Site__c/fields/All_Electric_Building__c.field-meta.xml
<CustomField>
    <fullName>All_Electric_Building__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SF-29456</description>
    <label>All Electric Building</label>
    <type>Checkbox</type>
</CustomField>