force-app/main/default/objects/Proposal_Site__c/fields/Annual_Services_Costs__c.field-meta.xml
<CustomField>
    <fullName>Annual_Services_Costs__c</fullName>
    <label>Annual Services Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>