force-app/main/default/objects/Proposal_Site__c/fields/Application_Priority_Reason__c.field-meta.xml
<CustomField>
    <fullName>Application_Priority_Reason__c</fullName>
    <description>This field will be used by Shared service Team to Prioritize the Application specifically for EAE Program.</description>
    <label>Application Priority Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>No Heat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>