force-app/main/default/objects/Proposal_Site__c/fields/Approved_Income_Tier__c.field-meta.xml
<CustomField>
    <fullName>Approved_Income_Tier__c</fullName>
    <label>Approved Income Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier I</fullName>
            </value>
            <value>
                <fullName>Tier II</fullName>
            </value>
            <value>
                <fullName>Tier III</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>