force-app/main/default/objects/Proposal_Site__c/fields/BQDM_Brooklyn_Queens_Demand_Management__c.field-meta.xml
<CustomField>
    <fullName>BQDM_Brooklyn_Queens_Demand_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <description>S-00483: BQDM (Brooklyn Queens Demand Management) - Desc TBD</description>
    <inlineHelpText>Check if site is participating in the Brooklyn Queens Demand Management (BQDM) program</inlineHelpText>
    <label>BQDM (Brooklyn Queens Demand Management)</label>
    <type>Checkbox</type>
</CustomField>