force-app/main/default/objects/Proposal_Site__c/fields/Broker_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Broker_License_Number__c</fullName>
    <description>Real Estate License Number used by the Broker Referral Program</description>
    <inlineHelpText>Real Estate License Number</inlineHelpText>
    <label>Broker License Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>