force-app/main/default/objects/Proposal_Site__c/fields/Brownfield__c.field-meta.xml
<CustomField>
    <fullName>Brownfield__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field available if customer sector == &apos;Non-Residential&apos; &amp;&amp; utility company != &apos;PSEG&apos;</description>
    <label>Brownfield</label>
    <type>Checkbox</type>
</CustomField>