force-app/main/default/objects/Proposal_Site__c/fields/Building_Energy_Performance_Units__c.field-meta.xml
<CustomField>
    <fullName>Building_Energy_Performance_Units__c</fullName>
    <description>Input the energy metric your project used to determine the project&apos;s performance.</description>
    <inlineHelpText>Input the energy metric your project used to determine the project&apos;s performance.</inlineHelpText>
    <label>Building Energy Performance Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>% Source Savings</fullName>
            </value>
            <value>
                <fullName>EUI</fullName>
            </value>
            <value>
                <fullName>HERS Index</fullName>
            </value>
            <value>
                <fullName>kBtu/TFA/yr</fullName>
            </value>
            <value>
                <fullName>kWh/person/yr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>