force-app/main/default/objects/Proposal_Site__c/fields/Building_Type__c.field-meta.xml
<CustomField>
    <fullName>Building_Type__c</fullName>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture and Forestry</fullName>
            </value>
            <value>
                <fullName>Assisted Living/Nursing Home</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Communications facilities</fullName>
            </value>
            <value>
                <fullName>Education – Colleges &amp; Universities</fullName>
            </value>
            <value>
                <fullName>Education – K-12</fullName>
            </value>
            <value>
                <fullName>Facility of refuge/emergency evacuation shelter</fullName>
            </value>
            <value>
                <fullName>Federal Government</fullName>
            </value>
            <value>
                <fullName>Food and medicine warehousing and retail distribution centers</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Industrial / Manufacturing</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Local Government</fullName>
            </value>
            <value>
                <fullName>Mixed Use</fullName>
            </value>
            <value>
                <fullName>Mixed-Use</fullName>
            </value>
            <value>
                <fullName>Multifamily</fullName>
            </value>
            <value>
                <fullName>Not for Profit</fullName>
            </value>
            <value>
                <fullName>Nursing Home</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Public safety facilities</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>State Government</fullName>
            </value>
            <value>
                <fullName>Transportation and heating fuel storage depots and retail dispensing centers</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>