force-app/main/default/objects/Proposal_Site__c/fields/Building_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Building_Type_Other__c</fullName>
    <label>Building Type Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>