force-app/main/default/objects/Proposal_Site__c/fields/CDG_LMI_Affordable_Housing__c.field-meta.xml
<CustomField>
    <fullName>CDG_LMI_Affordable_Housing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field available if customer sector == &apos;Non-Residential&apos; &amp;&amp; utility company != &apos;PSEG&apos;</description>
    <inlineHelpText>Whether the Community Distributed Generation, Low to Moderate Income incentive applies to this site</inlineHelpText>
    <label>CDG LMI Affordable Housing</label>
    <type>Checkbox</type>
</CustomField>