force-app/main/default/objects/Proposal_Site__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City</description>
    <label>City</label>
    <length>120</length>
    <type>Text</type>
</CustomField>