force-app/main/default/objects/Proposal_Site__c/fields/Community_Adder__c.field-meta.xml
<CustomField>
    <fullName>Community_Adder__c</fullName>
    <description>SF-27637: Community Adder</description>
    <label>Community Adder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>O&amp;R - Rate 1 ($.25/W)</fullName>
            </value>
            <value>
                <fullName>O&amp;R - Rate 2 ($.15/W)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>