force-app/main/default/objects/Proposal_Site__c/fields/Compliance_Path_Certifications__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Path_Certifications__c</fullName>
    <label>Compliance Path Certifications(picklist)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise Green Communities</fullName>
            </value>
            <value>
                <fullName>Green Globes</fullName>
            </value>
            <value>
                <fullName>LEED certification</fullName>
            </value>
            <value>
                <fullName>Modified Prescriptive Path</fullName>
            </value>
            <value>
                <fullName>NY-CHPS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Passive House</fullName>
            </value>
            <value>
                <fullName>Passive House Institute (PHI) Path</fullName>
            </value>
            <value>
                <fullName>Passive House Institute US (PHIUS) Path</fullName>
            </value>
            <value>
                <fullName>Performance Path with ENERGY STAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>