force-app/main/default/objects/Proposal_Site__c/fields/Compliance_Path_Certifications_Multi__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Path_Certifications_Multi__c</fullName>
    <inlineHelpText>Select all that apply</inlineHelpText>
    <label>Compliance and Performance Path</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2030 Challenge</fullName>
            </value>
            <value>
                <fullName>Energy $mart</fullName>
            </value>
            <value>
                <fullName>Energy Star MFNC/MFHR – ASHRAE</fullName>
            </value>
            <value>
                <fullName>Energy Star MFNC – ERI</fullName>
            </value>
            <value>
                <fullName>Energy Star SFNH (formally known as Certified Homes)</fullName>
            </value>
            <value>
                <fullName>Enterprise Green Communities</fullName>
            </value>
            <value>
                <fullName>Green Globes</fullName>
            </value>
            <value>
                <fullName>IFLI Certified</fullName>
            </value>
            <value>
                <fullName>LEED certification</fullName>
            </value>
            <value>
                <fullName>Modified Prescriptive Path</fullName>
            </value>
            <value>
                <fullName>NY-CHPS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Passive House</fullName>
            </value>
            <value>
                <fullName>Passive House institute (PHI)</fullName>
            </value>
            <value>
                <fullName>Passive House Institute (PHI) Path</fullName>
            </value>
            <value>
                <fullName>Passive House Institute US (PHIUS)</fullName>
            </value>
            <value>
                <fullName>Passive House Institute US (PHIUS) Path</fullName>
            </value>
            <value>
                <fullName>Performance Path with ENERGY STAR</fullName>
            </value>
            <value>
                <fullName>PHI – EnerPHit</fullName>
            </value>
            <value>
                <fullName>PHIUS Prescriptive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>