force-app/main/default/objects/Proposal_Site__c/fields/Construction_Method__c.field-meta.xml
<CustomField>
    <fullName>Construction_Method__c</fullName>
    <description>SF-29458</description>
    <label>Construction Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Modular Construction</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
            <value>
                <fullName>Panelized Construction</fullName>
            </value>
            <value>
                <fullName>Panelized Infill</fullName>
            </value>
            <value>
                <fullName>Panelized Rain Screen</fullName>
            </value>
            <value>
                <fullName>Structural Panel (pre-finished)</fullName>
            </value>
            <value>
                <fullName>Structural Panel (unfinished)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>