force-app/main/default/objects/Proposal_Site__c/fields/Construction_Type__c.field-meta.xml
<CustomField>
    <fullName>Construction_Type__c</fullName>
    <label>Construction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greater than 50% Retrofit</fullName>
            </value>
            <value>
                <fullName>Less than 50% Retrofit</fullName>
            </value>
            <value>
                <fullName>New Construction</fullName>
            </value>
            <value>
                <fullName>Historic Preservation</fullName>
                <isActive>false</isActive>
                <label>Historic Preservation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>