force-app/main/default/objects/Proposal_Site__c/fields/Critical_Infrastructure_Type__c.field-meta.xml
<CustomField>
    <fullName>Critical_Infrastructure_Type__c</fullName>
    <label>Critical Infrastructure Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Communications Facilities</fullName>
            </value>
            <value>
                <fullName>“Facility of Refuge/Emergency Evacuation Shelter” as recognized by the American Red Cross or the local Office of Emergency Management</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Nursing Home</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Public Safety Facilities</fullName>
            </value>
            <value>
                <fullName>Transportation &amp; Heating Fuel Storage &amp; Retail Dispensing Center</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Food &amp; medicine warehousing &amp; retail distribution center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>