force-app/main/default/objects/Proposal_Site__c/fields/Critical_Infrastructure_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Critical_Infrastructure_Type_Other__c</fullName>
    <description>Used to explain why Critical Infrastructure Type is other.</description>
    <label>Critical Infrastructure Type Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>