force-app/main/default/objects/Proposal_Site__c/fields/CS_goals_reducing_energy_use_gh_emission__c.field-meta.xml
<CustomField>
    <fullName>CS_goals_reducing_energy_use_gh_emission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does your company have sustainability goals that include reducing energy use and/or greenhouse gas emissions (Y/N)?</description>
    <inlineHelpText>Does your company have sustainability goals that include reducing energy use and/or greenhouse gas emissions (Y/N)?</inlineHelpText>
    <label>Meets CS goals</label>
    <type>Checkbox</type>
</CustomField>