force-app/main/default/objects/Proposal_Site__c/fields/Customer_Tariff_Classification__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tariff_Classification__c</fullName>
    <label>Customer Tariff Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>